--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,6 @@
 @font-face {
   font-family: calibri;
   src: url(/fonts/calibri.ttf); }
-body {
-  padding: 10px; }
-
 header #other_page_links {
   display: inline-block;
   float: right;
@@ -39,5 +36,44 @@ header #other_page_links {
     color: #686868;
     font-size: 12px;
     text-decoration: none; }
+header .top_tabs {
+  list-style-type: none;
+  margin: 0px;
+  width: 100%;
+  height: 50px;
+  padding: 0px;
+  background: linear-gradient(#777, #111); }
+  header .top_tabs li {
+    font-family: calibri;
+    font-size: 16px;
+    height: 50px;
+    line-height: 3.5;
+    padding: 0px 1%;
+    border-right: 1px solid #999;
+    color: #FFF;
+    float: left;
+    cursor: pointer; }
+    header .top_tabs li:hover {
+      background-color: #b01116; }
+
+.slider {
+  display: block;
+  width: 100%;
+  height: 400px; }
+  .slider .text_part {
+    display: inline-block;
+    width: 40%;
+    height: 100%;
+    background: radial-gradient(farthest-side at 60% 55%, #0c91bb, #0d6eb4); }
+    .slider .text_part .arrows li {
+      width: 30px;
+      display: inline-block;
+      height: 30px;
+      cursor: pointer;
+      background-image: url("/images/banner_navigation.png"); }
+      .slider .text_part .arrows li:nth-child(2) {
+        background-position: 100%; }
+      .slider .text_part .arrows li:hover {
+        opacity: 0.7; }
 
 /*# sourceMappingURL=styles.css.map */
