--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,9 @@
 @font-face {
   font-family: Helvetica-Neul;
   src: url(/fonts/helvetica-neue1.ttf); }
+@font-face {
+  font-family: Calibri-Bold;
+  src: url(/fonts/calibrib.ttf); }
 header #other_page_links {
   display: inline-block;
   float: right;
@@ -193,5 +196,96 @@ main .alert_videos section {
         font-family: Helvetica-Neul;
         font-size: 12px;
         color: #fff; }
+main .student_publcs_rooms ul {
+  padding: 0px; }
+  main .student_publcs_rooms ul li {
+    display: inline-block;
+    width: 33%;
+    font-family: Calibri-Bold;
+    font-size: 36px;
+    color: black; }
+    main .student_publcs_rooms ul li .bg_public {
+      width: 100%;
+      height: 100px;
+      position: relative;
+      margin-top: -110px; }
+
+footer {
+  background-color: #262626; }
+  footer .about_us, footer .other_links, footer .connent_with_us, footer .contact_us {
+    display: inline-block;
+    width: 23%;
+    color: white;
+    vertical-align: text-top; }
+    footer .about_us h3, footer .other_links h3, footer .connent_with_us h3, footer .contact_us h3 {
+      font-family: Calibri-Bold;
+      font-size: 18px;
+      color: #fff; }
+    footer .about_us h4, footer .other_links h4, footer .connent_with_us h4, footer .contact_us h4 {
+      font-family: Calibri-Bold;
+      font-size: 18px;
+      color: #fff;
+      margin-bottom: 5px; }
+    footer .about_us p, footer .about_us li, footer .about_us a, footer .other_links p, footer .other_links li, footer .other_links a, footer .connent_with_us p, footer .connent_with_us li, footer .connent_with_us a, footer .contact_us p, footer .contact_us li, footer .contact_us a {
+      font-family: Calibri-Italic;
+      font-size: 15px;
+      color: #fff;
+      margin: 0px 0px 5px; }
+  footer .about_us {
+    padding-left: 10px; }
+    footer .about_us a {
+      text-decoration: none;
+      color: #ff6c00;
+      float: right;
+      margin-right: 20px; }
+      footer .about_us a:hover {
+        text-decoration: underline; }
+  footer .other_links {
+    margin: 0px;
+    list-style-type: none; }
+    footer .other_links li {
+      padding: 2px; }
+      footer .other_links li img {
+        margin-right: 10px; }
+  footer .connent_with_us ul {
+    padding: 5px; }
+  footer .connent_with_us li {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    background-image: url("/images/socialIcon_bottom.png"); }
+    footer .connent_with_us li:nth-child(2) {
+      background-position-x: 35%; }
+    footer .connent_with_us li:nth-child(3) {
+      background-position-x: 67%; }
+    footer .connent_with_us li:nth-child(4) {
+      background-position-x: 100%; }
+    footer .connent_with_us li:hover {
+      background-position-y: 100%; }
+  footer .sub_footer {
+    background-color: #181818;
+    font-family: Calibri-Regular;
+    font-size: 13px;
+    color: white; }
+    footer .sub_footer p {
+      display: inline-block;
+      width: 50%; }
+    footer .sub_footer ul {
+      display: inline-block;
+      width: 45%;
+      float: right;
+      list-style-type: none; }
+      footer .sub_footer ul li {
+        padding: 2px 10px;
+        display: inline-block;
+        margin: 0px; }
+        footer .sub_footer ul li:not(:first-child) {
+          border-left: 1px solid #AAA; }
+        footer .sub_footer ul li a {
+          text-decoration: none;
+          color: white;
+          transition: all 0.3s linear; }
+          footer .sub_footer ul li a:hover {
+            color: #ff6c00; }
 
 /*# sourceMappingURL=styles.css.map */
